--- a/ValCPF/index.html
+++ b/ValCPF/index.html
@@ -1,22 +1,37 @@
-﻿<html>
+﻿<!DOCTYPE html>
+
+<html lang="pt-BR">
 <head>
+    <meta charset="UTF-8" />
+
     <link rel="stylesheet" href="maquiagem.css">
 </head>
 <body>
-    <p align = "center">Validação de CPF</p>
-    
+
+    <div class="title">
+        <h2 i18n="name" id="logo">Validação de CPF</h2>
+        <p>Trabalho escolar que consiste em calcular os numeros do CPF e verificar se é um cadastro valido.</p>
+    </div>
+
 <form ACTION="ValForm.php" method="post">
-    
-    <p>Trabalho escolar que consiste em validar os numeros do CPF (Cadastro de Pessoas Físicas)</p>
-
-    <p>Digite aqui o seu CPF: <label>
-        <input type="text" name="CPF" placeholder="Apenas os Numeros" required
+    <p>Digite aqui o seu CPF:
+        <label>
+            <input type="text" name="CPF" placeholder="Apenas os Numeros" required
                oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"/>
-    </label></p>
-
-    </p><button type="sub"> Enviar </button></p>
-
+        </label>
+    </p>
+    </p><button type="sub"> Verificar </button></p>
 </form>
+
+    <div class="footer">
+        <a href="https://github.com/AlevinoSauro/ValidCPF">
+            <picture>
+                <source src="/ValCPF/img/webp/github_link.png" type="image/webp">
+                <img src="/ValCPF/img/github_link.png" alt="Git" />
+            </picture>
+        </a>
+    </div>
+
 
 </body>
 </html>
