--- a/ValCPF/index.html
+++ b/ValCPF/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8" />
 
     <link rel="stylesheet" href="maquiagem.css">
+    <title>
+        Projetinho da Facul
+    </title>
 </head>
 <body>
 
     <div class="title">
         <h2 i18n="name"  align="center" id="logo">Validação de CPF</h2>
-        <p align="center">Trabalho escolar que consiste em calcular os numeros do CPF e verificar se é um cadastro valido.</p>
+        <p align="center">Trabalho escolar que consiste em calcular os números do CPF e verificar se é um cadastro valido.</p>
     </div>
 
-<form ACTION="ValForm.php" method="post">
-    <p align="center">Digite aqui o seu CPF:
-        <label align="center">
-            <input type="text" name="CPF" placeholder="Apenas os Numeros" required
-               oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"/>
-        </label>
-    </p>
-    <p align="center"><button type="sub" > Verificar </button></p>
-</form>
+    <form ACTION="ValForm.php" method="post">
+        <p align="center">Digite aqui o seu CPF:
+            <label align="center">
+                <input type="text" name="CPF" placeholder="Apenas os números" required
+                       oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"/>
+            </label>
+        </p>
+        <p align="center">
+            <button type="sub">Verificar</button>
+        </p>
+    </form>
 
     <div class="footer">
         <a href="https://github.com/AlevinoSauro/ValidCPF">
             <picture>
-                <source src="/ValCPF/img/webp/github_link.png" type="image/webp">
+                <source srcset="/ValCPF/img/webp/github_link.png" type="image/webp">
                 <img src="/ValCPF/img/github_link.png" alt="Git" />
             </picture>
         </a>
